# m7o

./: .dockerignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  Dockerfile  Justfile  README.md  release-please-config.json  role.crd.yaml  user.crd.yaml
.github/workflows/: release-please.yaml  release.yaml  tag.yaml  test.yaml
charts/: .helmignore
charts/m7o/: CHANGELOG.md  Chart.yaml  README.md  values.yaml
charts/m7o/crds/: m7o.yaml
charts/m7o/templates/: _helpers.tpl  deployment.yaml  rbac.yaml  serviceaccount.yaml
examples/manifests/: broker.yaml  user.yaml
manifests/: broker.yaml  user.yaml
src/: cm_ext.rs  crdgen.rs  credentials.rs  deployment.rs  error.rs  labels.rs  main.rs  metadata.rs  plan.rs  reconcile.rs  service.rs  util.rs  v1.rs
src/broker/: configmap.rs  deployment.rs  mod.rs  service.rs
src/user/: mod.rs  secret.rs
src/util/: cm_ext.rs  hash.rs  mod.rs  secret_ext.rs
