[package]
name = "m7o"
version = "0.1.0"
edition = "2024"
default-run = "m7o"

[[bin]]
name = "crdgen"
path = "src/crdgen.rs"

[dependencies]
k8s-openapi = { version = "0.27.0", features = ["v1_33"] }
kube = { version = "3.0.1", features = ["runtime", "derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
futures = "0.3.31"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
schemars = "1.2.0"
serde_json = "1.0.149"
serde_yaml = "0.9.34"
