[package]
name = "m7o"
version = "0.1.1"
edition = "2024"
default-run = "m7o"
publish = false
authors = ["Elmar Athmer"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "crdgen"
path = "src/crdgen.rs"

[dependencies]
k8s-openapi = { version = "0.27.0", features = ["v1_33"] }
kube = { version = "3.0.1", features = ["runtime", "derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
futures = "0.3.31"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
schemars = "1.2.0"
serde_json = "1.0.149"
serde_yaml = "0.9.34"
strum = { version = "0.27.2", features = ["strum_macros", "derive"] }
rand = "0.9.2"
pbkdf2 = "0.12.2"
sha2 = "0.10.9"
base64 = "0.22.1"
hmac = "0.12.1"
itertools = "0.14.0"
